# data-analits-MCP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEX_PROMT.md  Dockerfile  README.md  TASKS.md  compose.yaml  connections.yaml  pyproject.toml
app/: __init__.py  container.py  lifespan.py  main.py
app/adapters/: __init__.py  document_factory.py  document_registry.py  factory.py  registry.py
app/api/: health.py  metrics.py
app/config/: __init__.py  connections.py
app/exceptions/: __init__.py  domain.py
app/generation/: __init__.py  anthropic_native.py  context.py  explanation_parsing.py  explanation_prompting.py  factory.py  openai_compatible.py  parsing.py  prompting.py  provider.py  registry.py
app/models/: audit.py  catalog.py  connections.py  contracts.py  document_query.py  generation.py  health.py  metadata.py  query.py  rag.py  reporting.py
app/observability/: __init__.py  context.py  logging.py  metrics.py  middleware.py
app/rag/: __init__.py
app/reporting/: __init__.py  periods.py  service.py
app/repositories/: __init__.py  audit.py  catalog.py  document_index.py  (+5 more)
docs/: architecture.md  catalog.md  connections.md  development.md  document-security.md  mcp-contracts.md  mcp-tools.md  openwebui-integration.md  openwebui-test-prompts.md  operations.md  query-security.md  rag.md  security.md
documents/: data-dictionary-global.md
scripts/: backup_volume.sh  restore_volume.sh  smoke_mcp.py  smoke_openwebui.py
tests/: catalog_fakes.py  document_query_fakes.py  factories.py  generation_fakes.py  query_fakes.py  rag_fakes.py
(+147 files in other folders)
