[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "data-platform-mcp"
version = "0.2.0"
description = "MCP extensible para consultar plataformas de datos de forma segura."
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
  { name = "Data Platform MCP contributors" },
]
dependencies = [
  "fastapi>=0.139.0,<0.140.0",
  "fastmcp>=3.4.4,<3.5.0",
  "psycopg[binary]>=3.3.4,<3.4.0",
  "pydantic>=2.13.4,<3.0.0",
  "PyYAML>=6.0.3,<7.0.0",
  "uvicorn>=0.51.0,<0.52.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "mypy>=2.2.0,<2.3.0",
  "pytest>=9.1.1,<9.2.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.15.20,<0.16.0",
  "types-PyYAML>=6.0.12.20260518,<6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: requires the Docker PostgreSQL laboratory",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
